# DecisionForestRegression

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Decision_Forest.rar  Dockerfile  LICENSE  README.md  app.py  balanced_train.py  demo.py  docker-compose.yml  enhanced_80_train.py  enhanced_train.py  fast_enhanced_train.py  optimized_train.py  pyproject.toml  quick_train.py  requirements.txt  test_enhanced_model.py  test_model.py  test_models.py  train_model.py
.github/workflows/: ci-cd.yml
config/: default.yaml
data/: .gitkeep
logs/: .gitkeep
models/: .gitkeep
src/decision_forest/: __init__.py  cli.py
src/decision_forest/api/: __init__.py  endpoints.py  models.py  server.py
src/decision_forest/core/: __init__.py  decision_tree.py  forest.py  node.py  splitters.py
src/decision_forest/utils/: __init__.py  data_loader.py  metrics.py  preprocessing.py
templates/: index.html
tests/: conftest.py
tests/unit/: test_decision_forest.py  test_decision_tree.py
